CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(CLHEF CXX)

SET(PROJECT_VERSION "0.0.0.0")

INCLUDE(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
IF(COMPILER_SUPPORTS_CXX11)
  ADD_COMPILE_OPTIONS(
    "$<$<STREQUAL:$<TARGET_PROPERTY:LINKER_LANGUAGE>,CXX>:-std=c++11>")
ELSE(COMPILER_SUPPORTS_CXX11)
  MESSAGE(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
ENDIF(COMPILER_SUPPORTS_CXX11)

IF(CMAKE_SYSTEM_NAME MATCHES Darwin)
  SET(CMAKE_MACOSX_RPATH 1)
  ADD_COMPILE_OPTIONS(
    "$<$<STREQUAL:$<TARGET_PROPERTY:LINKER_LANGUAGE>,CXX>:-stdlib=libc++>")
ENDIF(CMAKE_SYSTEM_NAME MATCHES Darwin)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release CACHE STRING
    "Choose the type of build, options are: Debug, Release." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(CMAKE_VERBOSE_MAKEFILE TRUE)
ELSE(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(CMAKE_VERBOSE_MAKEFILE FALSE)
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -Wextra")
SET(CMAKE_C_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -Wall -Wextra")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
SET(CMAKE_C_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")

ADD_SUBDIRECTORY(src)

INCLUDE(InstallRequiredSystemLibraries)

SET(CPACK_PACKAGE_VENDOR "Chan Beom Park <cbpark@gmail.com>")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "0")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_PACKAGE_VERSION_TWEAK "0")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY
  "CMake ${CMake_VERSION_MAJOR}.${CMake_VERSION_MINOR}")
SET(CPACK_SOURCE_GENERATOR "TBZ2")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME
  "${CMAKE_PROJECT_NAME}-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}.${CPACK_PACKAGE_VERSION_TWEAK}")
SET(CPACK_SOURCE_IGNORE_FILES  "\\\\.#;/#;.*~")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "/\\\\.git")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "/\\\\.projectile")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "\\\\.bz2")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "\\\\.gz")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "/build/")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "Makefile")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "Makefile\\\\..*")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "CMakeCache.txt")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "CMakeFiles")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "cmake_install.cmake")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "install_manifest.txt")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "CPackConfig.cmake")
LIST(APPEND CPACK_SOURCE_IGNORE_FILES "CPackSourceConfig.cmake")
INCLUDE (CPack)

ADD_CUSTOM_TARGET (dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)