INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

SET(CLHEF_SRC particle.cc event.cc parser.cc lhef.cc)
ADD_LIBRARY(CLHEF SHARED ${CLHEF_SRC})
TARGET_LINK_LIBRARIES(CLHEF ${LIBS})
SET(LIBRARY_TARGET ${LIBRARY_TARGET} CLHEF)

IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
  SET(test_parse_SRC test_parse.cc)
  ADD_EXECUTABLE(test_parse ${test_parse_SRC})
  TARGET_LINK_LIBRARIES(test_parse CLHEF)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_parse)
  SET_TARGET_PROPERTIES(test_parse PROPERTIES INSTALL_RPATH "@loader_path/../lib")

  SET(test_render_SRC test_render.cc)
  ADD_EXECUTABLE(test_render ${test_render_SRC})
  TARGET_LINK_LIBRARIES(test_render CLHEF)
  SET(EXECUTABLE_TARGET ${EXECUTABLE_TARGET} test_render)
  SET_TARGET_PROPERTIES(test_render PROPERTIES INSTALL_RPATH "@loader_path/../lib")
ENDIF(CMAKE_BUILD_TYPE STREQUAL "Debug")

INSTALL(TARGETS ${EXECUTABLE_TARGET} ${LIBRARY_TARGET}
  RUNTIME DESTINATION bin
  LIBRARY DESTINATION lib
  ARCHIVE DESTINATION lib)

FILE(GLOB HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/*.h")
INSTALL(FILES ${HEADERS} DESTINATION include/${CMAKE_PROJECT_NAME})